# OpenAssetIO-MediaCreation

./: .gitignore  CMakeLists.txt  CMakePresets.json  GUIDELINES.md  README.md  RELEASE_NOTES.md  pyproject.toml  setup.py  traits.yml
.github/build_openassetio/: action.yml
.github/workflows/: build-wheels.yml  code-quality.yml  deploy-pypi.yml  examples.yml  test.yml
cmake/: ThirdParty.cmake
cmake/packaging/: README.md
cmake/packaging/python.dist-info/: METADATA.in  top_level.txt
decisions/: DR001-Locatable-content-traits.md  DR002-Versioning-traits-and-specifications-codegen.md
examples/: file_path_url_converter.ipynb  generic_republish.ipynb  hello_openassetio.ipynb  hybrid_plugin_system.ipynb  management_policies.ipynb  pyproject.toml  querying_entity_traits.ipynb  querying_entity_versions.ipynb  string_token_substitution.ipynb  ui_delegation.html  ui_delegation.ipynb  working_with_trait_versions.ipynb
examples/proxy_workflows/: README.md  bal_proxies.json  bal_proxies_openassetio_config.toml  proxies.py  requirements.txt
examples/resources/: helpers.py  requirements.txt
examples/resources/hello_openassetio/: bal_database.json
examples/resources/hybrid_plugin_system/: bal_database.json  openassetio_config.toml
examples/resources/hybrid_plugin_system/SimpleCppManager/: README.md
examples/resources/hybrid_plugin_system/SimpleHybridManager/: .clang-tidy  README.md  linter-requirements.txt  pyproject.toml
examples/resources/hybrid_plugin_system/SimpleHybridManager/plugin/: PyComponentOfSimpleHybridManager.py
examples/resources/hybrid_plugin_system/SimpleHybridManager/src/: CMakeLists.txt  CppComponentOfSimpleHybridManager.cpp
examples/resources/management_policies/: bal_database.json
examples/resources/querying_entity_traits/: bal_database.json  openassetio_config.toml
examples/resources/querying_entity_versions/: bal_database.json
examples/resources/working_with_trait_versions/: example.yml  v1.yml  v2.yml
examples/resources/working_with_trait_versions/openassetio_example/: __init__.py
examples/resources/working_with_trait_versions/openassetio_example/specifications/: __init__.py  example.py
examples/resources/working_with_trait_versions/openassetio_example/traits/: __init__.py  example.py
examples/resources/working_with_trait_versions/openassetio_example/v1/: __init__.py
examples/resources/working_with_trait_versions/openassetio_example/v1/specifications/: example.py
examples/resources/working_with_trait_versions/openassetio_example/v1/traits/: example.py
examples/resources/working_with_trait_versions/openassetio_example/v2/specifications/: example.py
examples/resources/working_with_trait_versions/openassetio_example/v2/traits/: example.py
openassetio_mediacreation/: README.md
python/openassetio_mediacreation/: __init__.py
python/openassetio_mediacreation/specification/: __init__.py  locale.py
python/openassetio_mediacreation/trait/: __init__.py  entity.py  locale.py
tests/cpp/: CMakeLists.txt  test.cpp  test_cmake.py
tests/python/: conftest.py
tests/python/openassetio_mediacreation/: test_imports.py  test_specifications.py
tests/python/openassetio_mediacreation/specification/: test_locale.py
tests/python/openassetio_mediacreation/trait/: __init__.py  test___init__.py  test_content.py  test_entity.py  test_locale.py
