# SPDX-License-Identifier: Apache-2.0
# Copyright 2021-2022 The Foundry Visionmongers Ltd

[project]
name = "openassetio-mediacreation"
version = "1.0.0a1"
requires-python = ">=3.7"

authors = [
    { name = "Contributors to the OpenAssetIO project", email = "openassetio-discussion@lists.aswf.io" }
]

[project.urls]
Source = "https://github.com/OpenAssetIO/OpenAssetIO-MediaCreation"
Issues = "https://github.com/OpenAssetIO/OpenAssetIO-MediaCreation/issues"

[tool.pylint.messages_control]

[tool.pylint.format]
max-line-length = 99

[tool.pylint.basic]
#module-naming-style = "camelCase"
argument-naming-style = "camelCase"
#attr-naming-style = "camelCase"
#function-naming-style = "camelCase"
#method-naming-style = "camelCase"
#const-naming-style = "camelCase"
class-const-naming-style = "camelCase"
variable-naming-style = "camelCase"

# Support both camelCase and PascalCase for modules
module-rgx = "_?([a-z]|[A-Z])+([A-Z][a-z0-9]*)*"
# camelCase doesn't include "__camelCase" or "test_camelCase"
attr-rgx = "_?_?[a-z0-9]+([A-Z][a-z0-9]*)*"
method-rgx = "(_?_|test_)?[a-z0-9]+([A-Z][a-z0-9]*)*"
function-rgx = "(_|test_)?[a-z0-9]+([A-Z][a-z0-9]*)*"
# C++ style constants, e.g. `kThing_SubThing`.
const-rgx = "k([A-Z0-9]+[a-z0-9]*)+_?([A-Z0-9]+[a-z0-9]*)*"
class-const-rgx = "k([A-Z0-9]+[a-z0-9]*)+_?([A-Z0-9]+[a-z0-9]*)*"

[tool.black]
line-length = 99
